apps/longhorn/dashboard-auth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: longhorn-basic-auth
  namespace: longhorn
spec:
  basicAuth:
    secret: longhorn-authsecret
